ALLY-164: Fix for extra whitespace * Whitespace caused by reducing padding to 15px, fixed by setting overflow-x to hidden.

--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -70,6 +70,7 @@
 @media (max-width: 768px) {
   .container-fluid {
     padding: 0 15px;
+    overflow-x: hidden;
   }
   .fc-scroller {
     min-height: 320px;
